main.tf
# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"  # Set AWS region to US East 1 (North Virginia)
}

# Local variables block for configuration values
locals {
    aws_key = "This_is_a_key"   # SSH key pair name for EC2 instance access
}

# EC2 instance resource definition
resource "aws_instance" "my_server" {
  ami           = data.aws_ami.amazonlinux.id  # Use the AMI ID from the data source
  instance_type = var.instance_type            # Use the instance type from variables
  key_name      = "This_is_a_key"          # Specify the SSH key pair name
  
  vpc_security_group_ids = [aws_security_group.allow_http_ssh.name]

  user_data = file("wp_install.sh")

  # Add tags to the EC2 instance for identification
  tags = {
    Name = "my ec2"
  }                  
}

resource "aws_security_group" "allow_http_ssh" {
  name        = "allow_http"
  description = "Allow HTTP and SSH inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
}

terraform {
  required_version = ">= 1.1.0"
  backend "s3" {
    bucket = "bucket-for-terra-rit" # S3 bucket for state storage
    key = "github-actions/terraform.tfstate" # State file path in the bucket
    region = "us-east-1" # AWS region
    encrypt = true
  }
}
